--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
                 <artifactId>poom-crons-api</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>org.codingmatters.poom.crons</groupId>
+                <artifactId>poom-crons-domain</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
             <!--// BOM-->
         </dependencies>
     </dependencyManagement>
