--- a/poom-crons-service/pom.xml
+++ b/poom-crons-service/pom.xml
@@ -25,6 +25,10 @@
             <artifactId>poom-crons-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.codingmatters.poom.crons</groupId>
+            <artifactId>poom-crons-domain</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.codingmatters.rest</groupId>
             <artifactId>cdm-rest-api</artifactId>
         </dependency>
