--- a/poom-crons-domain/pom.xml
+++ b/poom-crons-domain/pom.xml
@@ -22,6 +22,12 @@
             <groupId>org.codingmatters.poom</groupId>
             <artifactId>poom-services-support</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.codingmatters.poom</groupId>
+            <artifactId>poom-services-repository-in-memory</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
