--- a/poom-crons-domain/pom.xml
+++ b/poom-crons-domain/pom.xml
@@ -27,6 +27,11 @@
             <groupId>org.codingmatters.poom</groupId>
             <artifactId>poom-services-repository-in-memory</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.codingmatters.poom</groupId>
+            <artifactId>poom-services-test-support</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
