--- a/poom-crons-domain/pom.xml
+++ b/poom-crons-domain/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>poom-services-test-support</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.codingmatters.rest</groupId>
+            <artifactId>cdm-rest-tests-support</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
