--- a/poom-crons-service/pom.xml
+++ b/poom-crons-service/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>poom-services-repository-in-memory</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.codingmatters.poom</groupId>
+            <artifactId>poom-services-test-support</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
