--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
                 <plugin>
                     <groupId>io.flexio.io</groupId>
                     <artifactId>flexio-mongo-io-maven-plugin</artifactId>
-                    <version>1.2.0-SNAPSHOT</version>
+                    <version>1.4.0</version>
                 </plugin>
             </plugins>
         </pluginManagement>
