--- a/pom.xml
+++ b/pom.xml
@@ -60,8 +60,12 @@
     <modules>
         <module>poom-crons-api-spec</module>
         <module>poom-crons-api</module>
+        <module>poom-crons-client</module>
+
         <module>poom-crons-domain</module>
         <module>poom-crons-service</module>
+
+        <module>poom-crons-cronned-harness</module>
     </modules>
 
     <dependencies>
@@ -100,6 +104,16 @@
             <dependency>
                 <groupId>org.codingmatters.poom.crons</groupId>
                 <artifactId>poom-crons-service</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.codingmatters.poom.crons</groupId>
+                <artifactId>poom-crons-client</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.codingmatters.poom.crons</groupId>
+                <artifactId>poom-crons-cronned-harness</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
             <!--// BOM-->
