--- a/poom-crons-api-spec/pom.xml
+++ b/poom-crons-api-spec/pom.xml
@@ -21,13 +21,23 @@
                 <artifactId>cdm-rest-maven-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>api-doc-gen-crons</id>
+                        <id>api-doc-gen-crontab</id>
                         <phase>site</phase>
                         <goals>
                             <goal>generate-api-doc</goal>
                         </goals>
                         <configuration>
                             <api-spec-file>${basedir}/src/main/resources/poom-crons-api.raml</api-spec-file>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>api-doc-gen-cronned</id>
+                        <phase>site</phase>
+                        <goals>
+                            <goal>generate-api-doc</goal>
+                        </goals>
+                        <configuration>
+                            <api-spec-file>${basedir}/src/main/resources/poom-cronned-api.raml</api-spec-file>
                         </configuration>
                     </execution>
                 </executions>
