--- a/poom-crons-client/pom.xml
+++ b/poom-crons-client/pom.xml
@@ -10,25 +10,19 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>poom-crons-api</artifactId>
+    <artifactId>poom-crons-client</artifactId>
     <name>${project.groupId}:${project.artifactId}</name>
-
 
     <dependencies>
         <dependency>
+            <groupId>org.codingmatters.rest</groupId>
+            <artifactId>cdm-rest-client-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.codingmatters.poom.crons</groupId>
-            <artifactId>poom-crons-api-spec</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.codingmatters.value.objects</groupId>
-            <artifactId>cdm-value-objects-values</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
+            <artifactId>poom-crons-api</artifactId>
         </dependency>
     </dependencies>
-
 
     <build>
         <plugins>
@@ -44,25 +38,27 @@
                 </dependencies>
                 <executions>
                     <execution>
-                        <id>api-gen-crontab</id>
+                        <id>crontab-client</id>
                         <phase>generate-sources</phase>
                         <goals>
-                            <goal>generate-api-types</goal>
+                            <goal>generate-all-clients</goal>
                         </goals>
                         <configuration>
-                            <destination-package>org.codingmatters.poom.crons.crontab.api</destination-package>
+                            <root-package>org.codingmatters.poom.crons.crontab</root-package>
                             <api-spec-resource>poom-crons-api.raml</api-spec-resource>
+                            <vendor>flexio-oss</vendor>
                         </configuration>
                     </execution>
                     <execution>
-                        <id>api-gen-cronned</id>
+                        <id>cronned-client</id>
                         <phase>generate-sources</phase>
                         <goals>
-                            <goal>generate-api-types</goal>
+                            <goal>generate-all-clients</goal>
                         </goals>
                         <configuration>
-                            <destination-package>org.codingmatters.poom.crons.cronned.api</destination-package>
+                            <root-package>org.codingmatters.poom.crons.cronned</root-package>
                             <api-spec-resource>poom-cronned-api.raml</api-spec-resource>
+                            <vendor>flexio-oss</vendor>
                         </configuration>
                     </execution>
                 </executions>
