--- a/poom-crons-cronned-harness/pom.xml
+++ b/poom-crons-cronned-harness/pom.xml
@@ -10,25 +10,19 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>poom-crons-api</artifactId>
+    <artifactId>poom-crons-cronned-harness</artifactId>
     <name>${project.groupId}:${project.artifactId}</name>
-
 
     <dependencies>
         <dependency>
+            <groupId>org.codingmatters.rest</groupId>
+            <artifactId>cdm-rest-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.codingmatters.poom.crons</groupId>
-            <artifactId>poom-crons-api-spec</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.codingmatters.value.objects</groupId>
-            <artifactId>cdm-value-objects-values</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
+            <artifactId>poom-crons-api</artifactId>
         </dependency>
     </dependencies>
-
 
     <build>
         <plugins>
@@ -37,31 +31,21 @@
                 <artifactId>cdm-rest-maven-plugin</artifactId>
                 <dependencies>
                     <dependency>
-                        <groupId>org.codingmatters.poom.crons</groupId>
+                        <groupId>${project.groupId}</groupId>
                         <artifactId>poom-crons-api-spec</artifactId>
-                        <version>1.0.0-SNAPSHOT</version>
+                        <version>${project.version}</version>
                     </dependency>
                 </dependencies>
                 <executions>
                     <execution>
-                        <id>api-gen-crontab</id>
+                        <id>server-side-api-gen</id>
                         <phase>generate-sources</phase>
                         <goals>
-                            <goal>generate-api-types</goal>
+                            <goal>generate-server-side</goal>
                         </goals>
                         <configuration>
-                            <destination-package>org.codingmatters.poom.crons.crontab.api</destination-package>
-                            <api-spec-resource>poom-crons-api.raml</api-spec-resource>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>api-gen-cronned</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>generate-api-types</goal>
-                        </goals>
-                        <configuration>
-                            <destination-package>org.codingmatters.poom.crons.cronned.api</destination-package>
+                            <destination-package>org.codingmatters.poom.crons.cronned.api.harness</destination-package>
+                            <types-package>org.codingmatters.poom.crons.cronned.api</types-package>
                             <api-spec-resource>poom-cronned-api.raml</api-spec-resource>
                         </configuration>
                     </execution>
@@ -86,5 +70,4 @@
             </plugin>
         </plugins>
     </build>
-    
 </project>
