--- a/poom-crons-domain/pom.xml
+++ b/poom-crons-domain/pom.xml
@@ -27,6 +27,16 @@
             <groupId>org.codingmatters.poom</groupId>
             <artifactId>poom-services-repository-in-memory</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.codingmatters.poom.crons</groupId>
+            <artifactId>poom-crons-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.codingmatters.rest</groupId>
+            <artifactId>cdm-rest-client-okhttp</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.codingmatters.poom</groupId>
             <artifactId>poom-services-test-support</artifactId>
@@ -35,6 +45,16 @@
         <dependency>
             <groupId>org.codingmatters.rest</groupId>
             <artifactId>cdm-rest-tests-support</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.codingmatters.poom.crons</groupId>
+            <artifactId>poom-crons-cronned-harness</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.codingmatters.rest</groupId>
+            <artifactId>cdm-rest-undertow</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
