--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.codingmatters.poom</groupId>
         <artifactId>poom-services</artifactId>
-        <version>1.18.0-SNAPSHOT</version>
+        <version>1.18.0</version>
     </parent>
 
     <groupId>org.codingmatters.poom.crons</groupId>
@@ -80,7 +80,7 @@
             <dependency>
                 <groupId>io.flexio.commons</groupId>
                 <artifactId>flexio-commons</artifactId>
-                <version>1.14.0-SNAPSHOT</version>
+                <version>1.14.0</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -126,7 +126,7 @@
                 <plugin>
                     <groupId>io.flexio.io</groupId>
                     <artifactId>flexio-mongo-io-maven-plugin</artifactId>
-                    <version>1.14.0-SNAPSHOT</version>
+                    <version>1.14.0</version>
                 </plugin>
             </plugins>
         </pluginManagement>
