--- a/poom-crons-client/pom.xml
+++ b/poom-crons-client/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.codingmatters.poom.crons</groupId>
         <artifactId>poom-crons</artifactId>
-        <version>1.1.0</version>
+        <version>1.2.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>poom-crons-client</artifactId>
@@ -33,7 +33,7 @@
                     <dependency>
                         <groupId>org.codingmatters.poom.crons</groupId>
                         <artifactId>poom-crons-api-spec</artifactId>
-                        <version>1.1.0</version>
+                        <version>${project.version}</version>
                     </dependency>
                 </dependencies>
                 <executions>
