--- a/poom-crons-api/pom.xml
+++ b/poom-crons-api/pom.xml
@@ -27,6 +27,20 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>io.flexio.io</groupId>
+            <artifactId>flexio-mongo-io-values</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>bson</artifactId>
+        </dependency>
     </dependencies>
 
 
@@ -63,6 +77,30 @@
                         <configuration>
                             <destination-package>org.codingmatters.poom.crons.cronned.api</destination-package>
                             <api-spec-resource>poom-cronned-api.raml</api-spec-resource>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>io.flexio.io</groupId>
+                <artifactId>flexio-mongo-io-maven-plugin</artifactId>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.codingmatters.poom.crons</groupId>
+                        <artifactId>poom-crons-api-spec</artifactId>
+                        <version>${project.version}</version>
+                    </dependency>
+                </dependencies>
+                <executions>
+                    <execution>
+                        <id>mongo</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>mongo-mapping</goal>
+                        </goals>
+                        <configuration>
+                            <destination-package>org.codingmatters.poom.crons.crontab.api.types</destination-package>
+                            <api-spec-resource>poom-crons-api.raml</api-spec-resource>
                         </configuration>
                     </execution>
                 </executions>
