Passé dépendances en release

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.codingmatters.poom</groupId>
         <artifactId>poom-services</artifactId>
-        <version>1.23.0-SNAPSHOT</version>
+        <version>1.23.0</version>
     </parent>
 
     <groupId>org.codingmatters.poom.crons</groupId>
@@ -92,7 +92,7 @@
             <dependency>
                 <groupId>io.flexio.commons</groupId>
                 <artifactId>flexio-commons</artifactId>
-                <version>1.20.0-SNAPSHOT</version>
+                <version>1.20.0</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -138,7 +138,7 @@
                 <plugin>
                     <groupId>io.flexio.io</groupId>
                     <artifactId>flexio-mongo-io-maven-plugin</artifactId>
-                    <version>1.20.0-SNAPSHOT</version>
+                    <version>1.20.0</version>
                 </plugin>
             </plugins>
         </pluginManagement>
