--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.codingmatters.poom</groupId>
         <artifactId>poom-services</artifactId>
-        <version>1.26.0</version>
+        <version>1.27.0-SNAPSHOT</version>
     </parent>
 
     <groupId>org.codingmatters.poom.crons</groupId>
@@ -81,7 +81,7 @@
     </modules>
 
     <properties>
-        <flexio-commons.version>1.23.0</flexio-commons.version>
+        <flexio-commons.version>1.24.0-SNAPSHOT</flexio-commons.version>
     </properties>
 
     <dependencies>
