--- a/poom-crons-domain/pom.xml
+++ b/poom-crons-domain/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.codingmatters.poom.crons</groupId>
         <artifactId>poom-crons</artifactId>
-        <version>1.31.0</version>
+        <version>1.32.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>poom-crons-domain</artifactId>
