--- a/poom-crons-api/pom.xml
+++ b/poom-crons-api/pom.xml
@@ -35,7 +35,7 @@
 
         <dependency>
             <groupId>org.mongodb</groupId>
-            <artifactId>mongodb-driver</artifactId>
+            <artifactId>mongodb-driver-sync</artifactId>
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
