--- a/poom-crons-api/pom.xml
+++ b/poom-crons-api/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.codingmatters.poom.crons</groupId>
         <artifactId>poom-crons</artifactId>
-        <version>1.112.0</version>
+        <version>1.113.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>poom-crons-api</artifactId>
