--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
     </modules>
 
     <properties>
-        <flexio-commons.version>1.154.0</flexio-commons.version>
+        <flexio-commons.version>1.155.0-SNAPSHOT</flexio-commons.version>
     </properties>
 
     <dependencies>
