--- a/poom-crons-api-spec/pom.xml
+++ b/poom-crons-api-spec/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.codingmatters.poom.crons</groupId>
         <artifactId>poom-crons</artifactId>
-        <version>1.143.0</version>
+        <version>1.144.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>poom-crons-api-spec</artifactId>
