--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
     </modules>
 
     <properties>
-        <flexio-commons.version>1.164.0</flexio-commons.version>
+        <flexio-commons.version>1.165.0-SNAPSHOT</flexio-commons.version>
     </properties>
 
     <dependencies>
