--- a/poom-crons-service/pom.xml
+++ b/poom-crons-service/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.codingmatters.poom.crons</groupId>
         <artifactId>poom-crons</artifactId>
-        <version>1.163.0</version>
+        <version>1.164.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>poom-crons-service</artifactId>
