--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
     </modules>
 
     <properties>
-        <flexio-commons.version>1.192.0</flexio-commons.version>
+        <flexio-commons.version>1.193.0-SNAPSHOT</flexio-commons.version>
     </properties>
 
     <dependencies>
