--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.codingmatters.poom</groupId>
         <artifactId>poom-services</artifactId>
-        <version>1.192.0</version>
+        <version>1.193.0-SNAPSHOT</version>
     </parent>
 
     <groupId>org.codingmatters.poom.crons</groupId>
@@ -97,7 +97,7 @@
     </modules>
 
     <properties>
-        <flexio-commons.version>1.198.0</flexio-commons.version>
+        <flexio-commons.version>1.199.0-SNAPSHOT</flexio-commons.version>
     </properties>
 
     <dependencies>
